# packs

./: .gitignore  .pylintrc  CLAUDE.md  LICENSE  README.md  bump_pack_versions.sh  docker-compose.yml  dqops-checks-reference.md  push_all_packs.sh  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  publish-packs.yml
accuracy_pack/: LICENSE  README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  utils.py
data/early-stage-diabetes/: diabetes_data_upload.xlsx
data/heart-failure-prediction-dataset/: 20240224_outlier_detection_report_Heart Failure Prediction Dataset.xlsx  heart.xlsx
data/hepatitis-c/: HepatitisCdata.csv
data/india-covid-19/: Latest Covid-19 India Status.csv  source_conf.json
data/life-longevity-factors/: source_conf.json
data/medical-cost/: source_conf.json
data/ref-bio-data/: ref_bio_data.xlsx
data_compare_pack/: LICENSE  README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.ps1  source_conf.json
data_drift_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.sh
dbt_checks_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.ps1
duplicates_finder_pack/: LICENSE  README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.ps1  run.sh
fhir_compliance_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.bat  run.sh
great_expectations_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.sh
numeric_validation_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml
outlier_detection_pack/: LICENSE  README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.sh
pattern_validation_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml
pii_scanner_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.sh
precision_recall_pack/: LICENSE  README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml
profiling_pack/: LICENSE  README.md  get_pack_name.py  main.py  opener.py  pack_conf.json  properties.yaml  pyproject.toml  run.sh  utils.py
referential_integrity_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.sh
schema_scanner_pack/: LICENSE  README.md  main.py  opener.py  pack_conf.json  properties.yaml  pyproject.toml  run.ps1
scripts/: run.bat  run.ps1  run.sh
soda_pack/: LICENSE  README.md  checks.yaml  main.py  pack_conf.json  properties.yaml  pyproject.toml  run.sh
tests/: conftest.py  load_opendata.sh  source_conf.json  test_all_pack.sh  test_one_pack.sh  test_profiling.py
tests/data/: source_conf.json
tests/data/early-stage-diabetes/: source_conf.json
tests/data/heart-failure-prediction-dataset/: source_conf.json
tests/data/heart-stroke-prevention/: source_conf.json
tests/data/hepatitis-c/: source_conf.json
tests/data/iris/: iris_mssql.sql  iris_mysql_container.sql  iris_mysql_host.sql  iris_oracle.sql  iris_postgres_container.sql  iris_postgres_host.sql
tests/data/life-longevity-factors/: LiveLongerData.csv
tests/data/ref-bio-data/: source_conf.json
tests/data/subway-nutrition/: SubwayMenuNutrition.csv  source_conf.json
text_validation_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml
timeliness_pack/: README.md  main.py  pack_conf.json  properties.yaml  pyproject.toml
versioning_pack/: LICENSE  README.md  main.py  opener.py  pack_conf.json  properties.yaml  pyproject.toml
