[tool.poetry]
name = "packs"
version = "0.1.0"
description = "Qalita Public Packs"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ydata-profiling = "^4.6.0"
matplotlib = "3.7.0"
lxml = "^4.9.3"
sqlalchemy = "^2.0.23"
qalita_core = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
