[tool.poetry]
name = "accuracy-pack"
version = "2.0.0"
description = "Compute accuracy metrics of source"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
qalita-core = ">=1.2.4"
pyarrow = "^19.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
