[tool.poetry]
name = "data-compare-pack"
version = "1.0.0"
description = "Pack data-compare compare 2 sources"
authors = ["qalita"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
datacompy = "^0.11.0"
qalita-core = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
