[tool.poetry]
name = "data-compare-pack"
version = "1.0.0"
description = "Pack data-compare compare 2 sources"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
datacompy = "^0.18.0"
qalita-core = ">=1.2.4"
pyarrow = "^19.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
