[project]
name = "data-compare-pack"
version = "1.0.0"
description = "Pack data-compare compare 2 sources"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "datacompy>=0.18.0",
    "qalita-core>=1.4.0",
    "pyarrow>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
