[tool.poetry]
name = "data-drift-pack"
version = "0.1.0"
description = "Monitors statistical drift between reference and current datasets"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qalita-core = ">=1.2.4"
scipy = ">=1.10.0"
pyarrow = "^19.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


