[project]
name = "data-drift-pack"
version = "0.1.0"
description = "Monitors statistical drift between reference and current datasets"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "qalita-core>=1.4.0",
    "scipy>=1.10.0",
    "pyarrow>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
