[project]
name = "dbt-checks-pack"
version = "0.1.0"
description = "Run dbt tests and emit QALITA metrics"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "qalita-core>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
