[tool.poetry]
name = "duplicates-finder-pack"
version = "1.0.0"
description = "Pack duplicates-finder find and count duplicates data"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
qalita-core = ">=1.2.1"
pyarrow = "^19.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
