[tool.poetry]
name = "fhir-compliance-pack"
version = "0.1.0"
description = "Validate dataset compliance against HL7 FHIR resources"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qalita-core = ">=1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


