[project]
name = "fhir-compliance-pack"
version = "0.1.0"
description = "Validate dataset compliance against HL7 FHIR resources"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "qalita-core>=1.2.4",
    "pyarrow>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
