[tool.poetry]
name = "great-expectations-pack"
version = "0.1.0"
description = "Run Great Expectations suites on datasets"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qalita-core = ">=1.0.1"
great-expectations = ">=0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


