[tool.poetry]
name = "outlier_detection-pack"
version = "1.0.0"
description = "outlier_detection pack"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qalita-core = ">=1.2.0"
pyod = "^1.1.2"
numpy = "^1.26.3"
xlsxwriter = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
