[tool.poetry]
name = "outlier_detection-pack"
version = "1.0.0"
description = "outlier_detection pack"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
qalita-core = ">=1.2.3"
pyod = "^1.1.2"
numpy = "^2.0.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"



xlsxwriter = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
