[project]
name = "outlier_detection-pack"
version = "1.0.0"
description = "outlier_detection pack"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "qalita-core>=1.2.4",
    "pyod>=1.1.2",
    "numpy>=2.0.0",
    "pandas>=2.1.1",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.2",
    "xlsxwriter>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
