[project]
name = "pattern-validation-pack"
version = "0.1.0"
description = "Validates data formats using predefined patterns and custom regex rules"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "qalita-core>=1.5.0",
    "pyarrow>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
