[tool.poetry]
name = "pii-scanner-pack"
version = "0.1.0"
description = "Detects PII patterns and computes sensitivity metrics"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
qalita-core = ">=1.2.4"
pyarrow = "^19.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


