[project]
name = "pii-scanner-pack"
version = "0.1.0"
description = "Detects PII patterns and computes sensitivity metrics"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "qalita-core>=1.2.4",
    "pyarrow>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
