[tool.poetry]
name = "precision-recall"
version = "1.0.0"
description = "Pack precision-recall Compute precision/recall scores between a source and a target"
authors = ["qalita"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^0.24.2"
matplotlib = "3.7.0"
lxml = "^4.9.3"
pandas = "2.0.3"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
