[tool.poetry]
name = "precision-recall"
version = "1.0.0"
description = "Pack precision-recall Compute precision/recall scores between a source and a target"
authors = ["qalita"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^0.24.2"
qalita-core = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
