[tool.poetry]
name = "referential-integrity-pack"
version = "0.1.0"
description = "Validates referential integrity across datasets/tables"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qalita-core = ">=0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


