[project]
name = "schema-scanner-pack"
version = "1.0.0"
description = "Scan schema for files"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ydata-profiling>=4.6.0",
    "matplotlib>=3.8.0",
    "lxml>=4.9.3",
    "openpyxl>=3.1.2",
    "sqlalchemy>=2.0.23",
    "html5lib>=1.1",
    "beautifulsoup4>=4.12.3",
    "psycopg2-binary>=2.9.9",
    "qalita-core>=1.2.4",
    "pyarrow>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
