[tool.poetry]
name = "soda-pack"
version = "1.0.0"
description = "Check validity format for soda"
authors = ["QALITA SAS <contact@qalita.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
qalita-core = ">=1.2.4"
pyarrow = "^19.0.0"
soda-core = {version = "^3.5.5", extras = ["pandas"]}
soda-core-pandas-dask = "^3.5.5"
pandas = ">=2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
