[project]
name = "soda-pack"
version = "1.0.0"
description = "Check validity format for soda"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "qalita-core>=1.2.4",
    "pyarrow>=19.0.0",
    "soda-core>=3.5.5",
    "soda-core-pandas-dask>=3.5.5",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
