[tool.poetry]
name = "timeliness-pack"
version = "1.0.0"
description = "Scan schema for files"
authors = ["qalita"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.8.0"
lxml = "^4.9.3"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.23"
qalita-core = ">=1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
