[tool.poetry]
name = "timeliness-pack"
version = "1.0.0"
description = "Scan schema for files"
authors = ["qalita"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = "^3.8.0"
qalita-core = ">=1.2.3"
pyarrow = "^19.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
