[project]
name = "timeliness-pack"
version = "1.0.0"
description = "Scan schema for files"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "matplotlib>=3.8.0",
    "qalita-core>=1.5.0",
    "pyarrow>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
