[tool.poetry]
name = "versioning-pack"
version = "1.0.0"
description = "Determine the version of a source"
authors = ["qalita"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
requests = "^2.31.0"
python = ">=3.10,<3.12"
matplotlib = "3.7.0"
lxml = "^4.9.3"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.23"
qalita-core = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
