[project]
name = "versioning-pack"
version = "1.0.0"
description = "Determine the version of a source"
authors = [
    {name = "QALITA SAS", email = "contact@qalita.io"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.2",
    "sqlalchemy>=2.0.23",
    "qalita-core>=1.5.0",
    "pyarrow>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
